--- a/style.css
+++ b/style.css
@@ -40,4 +40,18 @@ body
     margin-left: 35px;
     transition: .3s;
 }
-.navbar a:hover
+.navbar a:hover{
+    color: #0ef;
+}
+.home {
+    position: relative;
+    width: 100%;
+    justify-content: space-between;
+    height: 100vh;
+    background: url("image/Snapchat-837294394.jpg") no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    padding: 70px 10% 0;
+}
