--- a/style.css
+++ b/style.css
@@ -48,10 +48,39 @@ body
     width: 100%;
     justify-content: space-between;
     height: 100vh;
-    background: url("image/Snapchat-837294394.jpg") no-repeat;
+    background: url("image/dekstop\ wallpaper.png") no-repeat;
     background-size: cover;
     background-position: center;
     display: flex;
     align-items: center;
     padding: 70px 10% 0;
+}
+.home-content {
+    max-width: 600px;
+}
+.home-content h3 {
+    font-size: 32px;
+    font-weight: 700;
+}
+.home-content h1 {
+    font-size: 56px;
+    font-weight: 700;
+    margin: -3px 0;
+}
+.home-contentp {
+    font-size: 200px;
+}
+.home-sci a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid #0ef;
+    border-radius: 50%;
+    font-size: 20px;
+    color: #0ef;
+    text-decoration: none;
+    margin: 30px 15px 30px 0;
 }
